[CHL-7] Fix train stutter on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,3 @@
   font-family: "Tektur", sans-serif;
   color-scheme: dark;
 }
-
-html, body {
-  overflow-x: hidden;
-}
